# tekken-rs

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  rust-clippy.yml
examples/: audio_tokenization_test.rs  basic_tokenizer_test.rs  basic_usage.rs  detailed_test.rs
src/: audio.rs  config.rs  errors.rs  lib.rs  special_tokens.rs  tekkenizer.rs
tests/: test_audio.rs  test_decode_fix.rs  test_detailed_profile.rs  test_from_file.rs  test_from_file_debug.rs  test_full_vocab_profile.rs  test_integration.rs  test_profile_loading.rs  test_rust_tokenizer.rs  test_small_vocab.rs  test_specific_tokens.rs  test_tekken.rs  test_tokenizer_detailed.rs  test_tokenizer_output.rs
